--- a/2.0-optimizing-emergency-response.ipynb
+++ b/2.0-optimizing-emergency-response.ipynb
@@ -236,7 +236,8 @@
     "capacities = {'D1': 1000, 'D2': 2000, 'T1': 1600, 'T2': 2000}\n",
     "\"\"\"\n",
     "availability = {'W1': 1500, 'W2': 20000} \n",
-    "capacities = {'D1': 1000, 'D2': 12000, 'T1': 1600, 'T2': 2000}\n",
+    "capacities = {'D1': 1000, 'D2': 12000, 'T1': 1600, 'T2': 2000} \n",
+    "# need to add a constraint saying that total transfer from each warehouse cant be greater than availability of that warehouse+++\n",
     "# need to set proper connection between x and z. deploy from warehouse\n",
     "# the edge in network diagram is currently based on x. \n",
     "\n",
@@ -394,7 +395,6 @@
     "keys_to_keep = [key for sublist in routes for key in sublist]\n",
     "# Filter the dictionary to keep only the keys in `keys_to_keep`\n",
     "node_positions = {k: node_positions0[k] for k in keys_to_keep if k in node_positions0}\n",
-    "\n",
     "\n",
     "# Instantiate and plot the network\n",
     "relief_network = ReliefNetwork(warehouses_location, shelters_location, node_positions, demands)\n",
