--- a/2.0-optimizing-emergency-response.ipynb
+++ b/2.0-optimizing-emergency-response.ipynb
@@ -442,6 +442,43 @@
     "collapsed": false
    },
    "id": "1e1bebc77704d64a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3\n",
+      "3.11.5 (main, Sep 11 2023, 08:17:37) [Clang 14.0.6 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import networkx as nx\n",
+    "print(nx.__version__)\n",
+    "import sys\n",
+    "print(sys.version)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-09T02:18:42.361214Z",
+     "start_time": "2024-09-09T02:18:42.352205Z"
+    }
+   },
+   "id": "9841583b0d60321",
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fcc250244f5361e3"
   }
  ],
  "metadata": {
